cmake_minimum_required(VERSION 3.25)
project(luogu)

set(CMAKE_CXX_STANDARD 14)

add_executable(P1147 P1147.cpp)

add_executable(P1102 P1102.cpp)
add_executable(P1048 P1048.cpp)
add_executable(P1616 P1616.cpp)
add_executable(P1164 P1164.cpp)
add_executable(P4017 P4017.cpp)
add_executable(P1434 P1434.cpp)
add_executable(P1216 P1216.cpp)