cmake_minimum_required(VERSION 3.25)
project(luogu)

set(CMAKE_CXX_STANDARD 14)

add_executable(P1147 P1147.cpp)

add_executable(P1102 P1102.cpp)
add_executable(P1048 P1048.cpp)
add_executable(P1616 P1616.cpp)
add_executable(P1164 P1164.cpp)
add_executable(P4017 P4017.cpp)
add_executable(P1434 P1434.cpp)
add_executable(P1216 P1216.cpp)
add_executable(P1802 P1802.cpp)
add_executable(P1049 P1049.cpp)
add_executable(P1077 P1077.cpp)
add_executable(P3842 P3842.cpp)
add_executable(P2249 P2249.cpp)
add_executable(B3627 B3627.cpp)
add_executable(P1873 P1873.cpp)

add_executable(P2440 P2440.cpp)
add_executable(P2678 P2678.cpp)