cmake_minimum_required(VERSION 3.25)
project(luogu)

set(CMAKE_CXX_STANDARD 14)

add_executable(P1147 P1147.cpp)

add_executable(P1102 P1102.cpp)
add_executable(P1048 P1048.cpp)
add_executable(P1616 P1616.cpp)
add_executable(P1164 P1164.cpp)
add_executable(P4017 P4017.cpp)
add_executable(P1434 P1434.cpp)
add_executable(P1216 P1216.cpp)
add_executable(P1802 P1802.cpp)
add_executable(P1049 P1049.cpp)
add_executable(P1077 P1077.cpp)
add_executable(P3842 P3842.cpp)
add_executable(P2249 P2249.cpp)
add_executable(B3627 B3627.cpp)
add_executable(P1873 P1873.cpp)

add_executable(P2440 P2440.cpp)
add_executable(P2678 P2678.cpp)
add_executable(P3853 P3853.cpp)
add_executable(P1182 P1182.cpp)
add_executable(P3743 P3743.cpp)
add_executable(P1036 P1036.cpp)
add_executable(P2089 P2089.cpp)
add_executable(P1088 P1088.cpp)
add_executable(P1149 P1149.cpp)
add_executable(P2036 P2036.cpp)
add_executable(P1135 P1135.cpp)
add_executable(P1683 P1683.cpp)
add_executable(P1596 P1596.cpp)
add_executable(P1025 P1025.cpp)
add_executable(p1019 P1019.cpp)
add_executable(P9471 P9471.cpp)
add_executable(P9472 P9472.cpp)
add_executable(P9473 P9473.cpp)
add_executable(P1746 P1746.cpp)
add_executable(P1443 P1443.cpp)
add_executable(P1332 P1332.cpp)
add_executable(P1747 P1747.cpp)
add_executable(P2385 P2385.cpp)
add_executable(P1162 P1162.cpp)
add_executable(P2895 P2895.cpp)
add_executable(P3395 P3395.cpp)
add_executable(P2658 P2658.cpp)
add_executable(P9548 P9548.cpp)
